Move change language dropdown for all roles on navbar.

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,6 @@
 {
     "title": "Subscriptions Portal",
+    "welcome": "Welcome",
     "login": "Login",
     "register": "Register",
     "dontHaveAccount": "Don't have an account?",
