--- a/languages/es.json
+++ b/languages/es.json
@@ -1,5 +1,6 @@
 {
     "title": "Portal de Subscripciones",
+    "welcome": "Bienvenido",
     "login": "Entrar",
     "register": "Registrar",
     "dontHaveAccount": "No tiene una cuenta?",
