--- a/languages/en.json
+++ b/languages/en.json
@@ -5,6 +5,26 @@
     "register": "Register",
     "dontHaveAccount": "Don't have an account?",
     "create": "Create",
+    "members": "Members",
+    "add": "Add",
+    "name": "Name",
+    "lastName": "Last Name",
+    "phoneNumber": "Phone Number",
+    "email": "Email",
+    "password": "Password",
+    "dateOfBirth": "Date Of Birth",
+    "plan": "Plan",
+    "action": "Action",
+    "membership": {
+        "notPlan": "You are currently not on any plan. Purchase a subscription below.",
+        "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below."
+    },
+    "previous": "Previous",
+    "next": "Next",
+    "search": "Search",
+    "emptyTable": "No data available in table",
+    "infoNotEmpty": "Showing _START_ to _END_ of _TOTAL_ entries",
+    "infoEmpty": "Showing 0 to 0 of 0 entries",
     "selectLanguage": "Select Language",
     "content": {
         "description": "A little description."
