Implement multi-language on Registration form.

--- a/languages/en.json
+++ b/languages/en.json
@@ -5,6 +5,7 @@
     "register": "Register",
     "dontHaveAccount": "Don't have an account?",
     "create": "Create",
+    "createAccount": "Create Account",
     "members": "Members",
     "add": "Add",
     "name": "Name",
@@ -12,7 +13,16 @@
     "phoneNumber": "Phone Number",
     "email": "Email",
     "password": "Password",
+    "passwordRequirement": "Password must contain the following:",
+    "lowerCase": "lowercase letter",
+    "upperCase": "capital (uppercase) letter",
+    "number": "number",
+    "characters": "characters",
     "dateOfBirth": "Date Of Birth",
+    "carPlate": "Plate",
+    "carBrand": "Brand",
+    "carModel": "Model",
+    "city": "City",
     "plan": "Plan",
     "action": "Action",
     "membership": {
