--- a/languages/es.json
+++ b/languages/es.json
@@ -5,6 +5,7 @@
     "register": "Registrar",
     "dontHaveAccount": "No tiene una cuenta?",
     "create": "Crear",
+    "createAccount": "Create Account",
     "members": "Miembros",
     "add": "Añadir",
     "name": "Nombre",
@@ -12,7 +13,16 @@
     "phoneNumber": "Teléfono",
     "email": "Correo Electrónico",
     "password": "Contraseña",
+    "passwordRequirement": "Password must contain the following:",
+    "lowerCase": "lowercase letter",
+    "upperCase": "capital (uppercase) letter",
+    "number": "number",
+    "characters": "characters",
     "dateOfBirth": "Fecha de Nacimiento",
+    "carPlate": "Plate",
+    "carBrand": "Brand",
+    "carModel": "Model",
+    "city": "City",
     "plan": "Plan",
     "action": "Acción",
     "membership": {
