Externalize DataTables. Change primary color and hover. Optimize JSON params to render on different templates.

--- a/languages/es.json
+++ b/languages/es.json
@@ -35,6 +35,7 @@
     "emptyTable": "No hay información disponible para esta tabla.",
     "infoNotEmpty": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
     "infoEmpty": "Mostrando 0 a 0 de 0 entradas",
+    "lengthMenu": "Muestra _MENU_ entradas",
     "selectLanguage": "Seleccionar Lenguaje",
     "content": {
         "description": "Descripción"
