--- a/languages/en.json
+++ b/languages/en.json
@@ -35,6 +35,7 @@
     "emptyTable": "No data available in table",
     "infoNotEmpty": "Showing _START_ to _END_ of _TOTAL_ entries",
     "infoEmpty": "Showing 0 to 0 of 0 entries",
+    "lengthMenu": "Show _MENU_ entries",
     "selectLanguage": "Select Language",
     "content": {
         "description": "A little description."
