Change es languages.

--- a/languages/es.json
+++ b/languages/es.json
@@ -13,16 +13,16 @@
     "phoneNumber": "Teléfono",
     "email": "Correo Electrónico",
     "password": "Contraseña",
-    "passwordRequirement": "Password must contain the following:",
-    "lowerCase": "lowercase letter",
-    "upperCase": "capital (uppercase) letter",
-    "number": "number",
-    "characters": "characters",
+    "passwordRequirement": "La contraseña debe contener lo siguiente:",
+    "lowerCase": "letra minúscula",
+    "upperCase": "letra mayúscula",
+    "number": "números",
+    "characters": "letras",
     "dateOfBirth": "Fecha de Nacimiento",
-    "carPlate": "Plate",
-    "carBrand": "Brand",
-    "carModel": "Model",
-    "city": "City",
+    "carPlate": "Tablilla",
+    "carBrand": "Marca",
+    "carModel": "Modelo",
+    "city": "Ciudad",
     "plan": "Plan",
     "action": "Acción",
     "membership": {
