Change user model. Add validation on cars.js findModel function. Create helper function to clear form. Handle create-subscriptions route. Change: use getAllPrices instead getAllProducts. Working on create subscriptions form.

--- a/languages/en.json
+++ b/languages/en.json
@@ -26,6 +26,7 @@
     "plan": "Plan",
     "action": "Action",
     "membership": {
+        "createSubscriptions" : "Create Subscriptions",
         "notPlan": "You are currently not on any plan. Purchase a subscription below.",
         "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below."
     },
