--- a/languages/en.json
+++ b/languages/en.json
@@ -1,5 +1,5 @@
 {
-    "title": "Subscriptions Portal",
+    "title": "Membership Portal",
     "welcome": "Welcome",
     "login": "Login",
     "register": "Register",
@@ -26,7 +26,7 @@
     "plan": "Plan",
     "action": "Action",
     "membership": {
-        "createSubscriptions" : "Create Subscriptions",
+        "createSubscriptions" : "Create Memberships",
         "notPlan": "You are currently not on any plan. Purchase a subscription below.",
         "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below."
     },
