Start dictionary to complete language translation.

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,35 +1,137 @@
 {
+    "home": "Home",
+    "month": "Month",
+    "termsAndConditions": "Terms and Conditions",
     "title": "Membership Portal",
     "welcome": "Welcome",
     "login": "Login",
+    "signOut": "Sing Out",
     "register": "Register",
+    "pricingList" : "Pricing List",
     "dontHaveAccount": "Don't have an account?",
     "create": "Create",
     "createAccount": "Create Account",
     "members": "Members",
     "add": "Add",
-    "name": "Name",
-    "lastName": "Last Name",
-    "phoneNumber": "Phone Number",
-    "email": "Email",
-    "password": "Password",
-    "passwordRequirement": "Password must contain the following:",
-    "lowerCase": "lowercase letter",
-    "upperCase": "capital (uppercase) letter",
-    "number": "number",
-    "characters": "characters",
-    "dateOfBirth": "Date Of Birth",
-    "carPlate": "Plate",
-    "carBrand": "Brand",
-    "carModel": "Model",
-    "city": "City",
-    "plan": "Plan",
-    "action": "Action",
-    "membership": {
-        "createSubscriptions" : "Create Memberships",
-        "notPlan": "You are currently not on any plan. Purchase a subscription below.",
-        "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below."
+    "car": {
+        "view": "View Car",
+        "info": "Car Information",
+        "add": "Add Car",
+        "edit": "Edit Car",
+        "all": "All Cars",
+        "cars": "Cars",
+        "name": "Car",
+        "manageMyCars": "Manage My Cars",
+        "plate": "Plate",
+        "plateNumber": "Plate Number",
+        "brand": "Brand",
+        "model": "Model",
+        "carsQty": "Cars Qty.",
+        "addMissingCar": "Add Missing Car",
+        "toUseOnNextPeriod": "to use on next period",
+        "confirmCarsForNextPeriod": "Confirm cars for next period",
+        "maxServiceQty": "This car has the maximum quantity of services per day",
+        "carExpiredOn": "This car expired on {date}",
+        "notFound": "Car not found",
+        "existingCar": "Existing Car Plate in the system. Please provide another plate",
+        "validCar": "Valid Car Plate",
+        "membershipToAddCar": "Membership to add aCar"
     },
+    "user": {
+        "name": "User",
+        "users": "Users",
+        "view": "View User",
+        "edit": "Edit User",
+        "add": "Add User",
+        "create": "Create User",
+        "myProfile": "My Profile",
+        "info": "Customer Information",
+        "personalInfo": "Personal Information",
+        "editPersonalInfo": "Edit Personal Info",
+        "firstName": "Name",
+        "lastName": "Last Name",
+        "phoneNumber": "Phone Number",
+        "email": "Email",
+        "role": "Role",
+        "city": "City",
+        "dateOfBirth": "Date Of Birth",
+        "password": {
+            "forgot": "Forgot Password?",
+            "name": "Password",
+            "new": "New Password",
+            "changePassword": "Change Password",
+            "passwordRequirement": "Password must contain the following:",
+            "lowerCase": "lowercase letter",
+            "upperCase": "capital (uppercase) letter",
+            "number": "number",
+            "characters": "characters"
+        },
+        "authorizedBy": "Authorized By",
+        "notFound": "Customer not found"
+    },
+    "membership": {
+        "name": "Membership",
+        "product": "Product",
+        "handleInvalid": "Handle Invalid Memberships",
+        "memberships": "Memberships",
+        "invalidMemberships": "Invalid Memberships",
+        "createSubscriptions": "Create Memberships",
+        "notPlan": "You are currently not on any plan. Purchase a subscription below.",
+        "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below.",
+        "disclaimer": "This is a subscription for 30 days upon purchase date.",
+        "perGroupOf": "per group of",
+        "manageBilling": "Manage Billing",
+        "info": "Membership Information",
+        "period": "Period",
+        "startDate": "Start Date",
+        "endDate": "End Date",
+        "status": "Status",
+        "validUntil": "Valid Until",
+        "validate": "Validate Memberships",
+        "readyByCamera": "Read By Camera",
+        "manualInput": "Manual Input",
+        "currentPeriodStart": "Current Period Start",
+        "currentPeriodEnd": "Current Period End",
+        "price": "Price",
+        "subTotal": "Sub Total",
+        "proceedToCheckout": "Proceed to Checkout"
+    },
+    "service": {
+        "qty": "Service (Qty.)",
+        "name": "Service",
+        "all": "All Services",
+        "myServices": "My Services",
+        "services": "Services",
+        "view": "View Service",
+        "info": "Service Information",
+        "recipe": "Service Recipe",
+        "id": "Service ID",
+        "notFound": "Service Not found.",
+        "use": "User Service"
+    },
+    "location": {
+        "name": "Location",
+        "all": "Locations"
+    },
+    "validation": {
+        "missingCredentials": "Missing email or password",
+        "userNotExist": "User with email {email} does not exist. Please Register.",
+        "wrongPassword": "Incorrect password provided"
+    },
+    "invoice": {
+        "all": "Invoices",
+        "myInvoices": "My Invoices"
+    },
+    "notification": "Notification",
+    "notifications": "Notifications",
+    "newNotifications": "You have {qty} new notifications",
+    "myNotifications": "My Notifications",
+    "date": "Date",
+    "action": "Action",
+    "quantity": "Quantity",
+    "zeroRecords": "No matching records found",
+    "first": "First",
+    "last": "Last",
     "previous": "Previous",
     "next": "Next",
     "search": "Search",
@@ -38,10 +140,23 @@
     "infoEmpty": "Showing 0 to 0 of 0 entries",
     "lengthMenu": "Show _MENU_ entries",
     "selectLanguage": "Select Language",
+    "select": "Select",
+    "selectOne": "Select One",
+    "save": "Save",
+    "cancel": "Cancel",
     "content": {
         "description": "A little description."
     },
-    "missingCredentials" : "Missing email or password",
-    "userNotExist" : "User with email {email} does not exist. Please Register.",
-    "wrongPassword": "Incorrect password provided"
+    "inputBy": "Input By",
+    "viewAll": "View All",
+    "activity": "Activity",
+    "customers": "Customers",
+    "dashboard": "Dashboard",
+    "myPlans": "My Plans",
+    "history": "History",
+    "reports": "Reports",
+    "validate": "Validate",
+    "done": "Done",
+    "myCart": "My Cart",
+    "createdDate": "Created Date"
 }
