--- a/languages/es.json
+++ b/languages/es.json
@@ -1,47 +1,203 @@
 {
-    "title": "Portal de Subscripciones",
-    "welcome": "Bienvenido",
-    "login": "Entrar",
-    "register": "Registrar",
-    "dontHaveAccount": "No tiene una cuenta?",
-    "create": "Crear",
+    "home": "Home",
+    "month": "Month",
+    "termsAndConditions": "Terms and Conditions",
+    "title": "Membership Portal",
+    "welcome": "Welcome",
+    "login": "Login",
+    "signOut": "Sing Out",
+    "register": "Register",
+    "pricingList": "Pricing List",
+    "dontHaveAccount": "Don't have an account?",
+    "create": "Create",
     "createAccount": "Create Account",
-    "members": "Miembros",
-    "add": "Añadir",
-    "name": "Nombre",
-    "lastName": "Apellido",
-    "phoneNumber": "Teléfono",
-    "email": "Correo Electrónico",
-    "password": "Contraseña",
-    "passwordRequirement": "La contraseña debe contener lo siguiente:",
-    "lowerCase": "letra minúscula",
-    "upperCase": "letra mayúscula",
-    "number": "números",
-    "characters": "letras",
-    "dateOfBirth": "Fecha de Nacimiento",
-    "carPlate": "Tablilla",
-    "carBrand": "Marca",
-    "carModel": "Modelo",
-    "city": "Ciudad",
-    "plan": "Plan",
-    "action": "Acción",
+    "accountCreated": "Account Created",
+    "validLink": "Valid Link",
+    "invalidLink": "Invalid Link",
+    "existEmail": "That email already exist, please login.",
+    "members": "Members",
+    "add": "Add",
+    "car": {
+        "view": "View Car",
+        "info": "Car Information",
+        "add": "Add Car",
+        "edit": "Edit Car",
+        "all": "All Cars",
+        "cars": "Cars",
+        "name": "Car",
+        "manageMyCars": "Manage My Cars",
+        "plate": "Plate",
+        "plateNumber": "Plate Number",
+        "brand": "Brand",
+        "model": "Model",
+        "carsQty": "Cars Qty.",
+        "addMissingCar": "Add Missing Car",
+        "toUseOnNextPeriod": "to use on next period",
+        "confirmCarsForNextPeriod": "Confirm cars for next period",
+        "maxServiceQty": "This car has the maximum quantity of services per day",
+        "carExpiredOn": "This car expired on {date}",
+        "notFound": "Car not found",
+        "existingCar": "Existing Car Plate in the system. Please provide another plate",
+        "validCar": "Valid Car Plate",
+        "membershipToAddCar": "Membership to add aCar"
+    },
+    "user": {
+        "name": "User",
+        "users": "Users",
+        "view": "View User",
+        "edit": "Edit User",
+        "add": "Add User",
+        "create": "Create User",
+        "selectMultiple": "Select Users",
+        "myProfile": "My Profile",
+        "info": "Customer Information",
+        "personalInfo": "Personal Information",
+        "editPersonalInfo": "Edit Personal Info",
+        "firstName": "Name",
+        "lastName": "Last Name",
+        "phoneNumber": "Phone Number",
+        "email": "Email",
+        "role": "Role",
+        "city": "City",
+        "dateOfBirth": "Date Of Birth",
+        "password": {
+            "forgot": "Forgot Password?",
+            "name": "Password",
+            "new": "New Password",
+            "changePassword": "Change Password",
+            "passwordRequirement": "Password must contain the following:",
+            "lowerCase": "lowercase letter",
+            "upperCase": "capital (uppercase) letter",
+            "number": "number",
+            "characters": "characters"
+        },
+        "authorizedBy": "Authorized By",
+        "notFound": "Customer not found"
+    },
     "membership": {
-        "createSubscriptions" : "Crear Membresías",
-        "notPlan": "Actualmente no estás en ningún plan. Compre una suscripción a continuación.",
-        "notHappy": "¿No estás satisfecho con tu plan actual? Cancele o actualice haciendo clic en el botón a continuación."
+        "name": "Membership",
+        "product": "Product",
+        "handleInvalid": "Handle Invalid Memberships",
+        "memberships": "Memberships",
+        "invalidMemberships": "Invalid Memberships",
+        "createSubscriptions": "Create Memberships",
+        "notPlan": "You are currently not on any plan. Purchase a subscription below.",
+        "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below.",
+        "disclaimer": "This is a subscription for 30 days upon purchase date.",
+        "perGroupOf": "per group of",
+        "manageBilling": "Manage Billing",
+        "info": "Membership Information",
+        "period": "Period",
+        "startDate": "Start Date",
+        "endDate": "End Date",
+        "status": "Status",
+        "validUntil": "Valid Until",
+        "validate": "Validate Memberships",
+        "readyByCamera": "Read By Camera",
+        "manualInput": "Manual Input",
+        "currentPeriodStart": "Current Period Start",
+        "currentPeriodEnd": "Current Period End",
+        "price": "Price",
+        "subTotal": "Sub Total",
+        "proceedToCheckout": "Proceed to Checkout"
     },
-    "previous": "Anterior",
-    "next": "Siguiente",
-    "search": "Buscar",
-    "emptyTable": "No hay información disponible para esta tabla.",
-    "infoNotEmpty": "Mostrando _START_ a _END_ de _TOTAL_ entradas",
-    "infoEmpty": "Mostrando 0 a 0 de 0 entradas",
-    "lengthMenu": "Muestra _MENU_ entradas",
-    "selectLanguage": "Seleccionar Lenguaje",
+    "service": {
+        "qty": "Service (Qty.)",
+        "name": "Service",
+        "all": "All Services",
+        "myServices": "My Services",
+        "services": "Services",
+        "view": "View Service",
+        "info": "Service Information",
+        "recipe": "Service Recipe",
+        "id": "Service ID",
+        "notFound": "Service Not found.",
+        "use": "User Service"
+    },
+    "location": {
+        "name": "Location",
+        "all": "Locations",
+        "add": "Add Location",
+        "edit": "Edit Location",
+        "view": "View Location",
+        "details": "Location Details"
+    },
+    "validation": {
+        "missingCredentials": "Missing email or password",
+        "userNotExist": "User with email {email} does not exist. Please Register.",
+        "wrongPassword": "Incorrect password provided",
+        "emailNotExist": "Email does not exist.",
+        "requestNotSend": "Password Reset Request Not Send",
+        "passwordUpdated": "Password Updated {email}."
+    },
+    "invoice": {
+        "all": "Invoices",
+        "myInvoices": "My Invoices"
+    },
+    "notification": "Notification",
+    "notifications": "Notifications",
+    "newNotifications": "You have {qty} new notifications",
+    "myNotifications": "My Notifications",
+    "stripeCharges": "Stripe Carges",
+    "invoices": "Invoices",
+    "invoiceNumber": "Invoice Number",
+    "events": "Events",
+    "date": "Date",
+    "action": "Action",
+    "quantity": "Quantity",
+    "zeroRecords": "No matching records found",
+    "first": "First",
+    "last": "Last",
+    "previous": "Previous",
+    "next": "Next",
+    "search": "Search",
+    "emptyTable": "No data available in table",
+    "infoNotEmpty": "Showing _START_ to _END_ of _TOTAL_ entries",
+    "infoEmpty": "Showing 0 to 0 of 0 entries",
+    "lengthMenu": "Show _MENU_ entries",
+    "selectLanguage": "Select Language",
+    "select": "Select",
+    "selectOne": "Select One",
+    "save": "Save",
+    "cancel": "Cancel",
     "content": {
-        "description": "Descripción"
+        "description": "A little description."
     },
-    "missingCredentials" : "El correo o la contraseña no pueden estar vacíos.",
-    "userNotExist" : "El usuario '{email}' no existe. Por favor registrase.",
-    "wrongPassword": "Contraseña Incorrecta."
+    "amount": "Amount",
+    "type": "Type",
+    "description": "Description",
+    "inputBy": "Input By",
+    "viewAll": "View All",
+    "activity": "Activity",
+    "viewActivity": "View Activity",
+    "myActivity": "My Activity",
+    "customers": "Customers",
+    "dashboard": "Dashboard",
+    "myPlans": "My Plans",
+    "history": "History",
+    "historyInfo": "History Information",
+    "reports": "Reports",
+    "validate": "Validate",
+    "done": "Done",
+    "myCart": "My Cart",
+    "createdDate": "Created Date",
+    "dueDate": "Due Date",
+    "name": "Name",
+    "services": "Services",
+    "selectServices": "Select Services",
+    "active": "Active",
+    "yes": "Yes",
+    "no": "No",
+    "edit": "Edit",
+    "areYouSure": "Are you sure?",
+    "youWontRevert": "You won't be able to revert this!",
+    "yesDeleteIt": "Yes, delete it!",
+    "deleted": "Deleted",
+    "hasBeenDeleted": "${message} has been deleted.",
+    "email": {
+        "title": "Auto Care Password Reset Request",
+        "verifyEmail": "Verify your email {email} to complete reset password process.",
+        "resetSucessfully": "Auto Care Password Reset Successfully",
+        "notSend": "Email Not Send."
+    }
 }
