--- a/languages/es.json
+++ b/languages/es.json
@@ -1,203 +1,203 @@
 {
-    "home": "Home",
-    "month": "Month",
-    "termsAndConditions": "Terms and Conditions",
-    "title": "Membership Portal",
-    "welcome": "Welcome",
-    "login": "Login",
-    "signOut": "Sing Out",
-    "register": "Register",
-    "pricingList": "Pricing List",
-    "dontHaveAccount": "Don't have an account?",
-    "create": "Create",
-    "createAccount": "Create Account",
-    "accountCreated": "Account Created",
-    "validLink": "Valid Link",
-    "invalidLink": "Invalid Link",
-    "existEmail": "That email already exist, please login.",
-    "members": "Members",
-    "add": "Add",
+    "home": "Inicio",
+    "month": "Mes",
+    "termsAndConditions": "Términos y Condiciones",
+    "title": "Portal de Membresías",
+    "welcome": "Bienvenido",
+    "login": "Iniciar Sesión",
+    "signOut": "Cerrar Sesión",
+    "register": "Registrar",
+    "pricingList": "Lista de Precios",
+    "dontHaveAccount": "¿No tiene una cuenta?",
+    "create": "Crear",
+    "createAccount": "Crear Cuenta",
+    "accountCreated": "Cuenta Creada",
+    "validLink": "Enlace es Valido",
+    "invalidLink": "Enlace es Invalido",
+    "existEmail": "Ese correo electrónico ya existe en nuestra sistema, favor iniciar sesión con sus credenciales.",
+    "members": "Miembros",
+    "add": "Añadir",
     "car": {
-        "view": "View Car",
-        "info": "Car Information",
-        "add": "Add Car",
-        "edit": "Edit Car",
-        "all": "All Cars",
-        "cars": "Cars",
-        "name": "Car",
-        "manageMyCars": "Manage My Cars",
-        "plate": "Plate",
-        "plateNumber": "Plate Number",
-        "brand": "Brand",
-        "model": "Model",
-        "carsQty": "Cars Qty.",
-        "addMissingCar": "Add Missing Car",
-        "toUseOnNextPeriod": "to use on next period",
-        "confirmCarsForNextPeriod": "Confirm cars for next period",
-        "maxServiceQty": "This car has the maximum quantity of services per day",
-        "carExpiredOn": "This car expired on {date}",
-        "notFound": "Car not found",
-        "existingCar": "Existing Car Plate in the system. Please provide another plate",
-        "validCar": "Valid Car Plate",
-        "membershipToAddCar": "Membership to add aCar"
+        "view": "Ver Carro",
+        "info": "Información del Carro",
+        "add": "Añadir Carro",
+        "edit": "Editar Carro",
+        "all": "Todos los Carros",
+        "cars": "Carros",
+        "name": "Carro",
+        "manageMyCars": "Manejar mis Carros",
+        "plate": "Tablilla",
+        "plateNumber": "Número de Tablilla",
+        "brand": "Marca",
+        "model": "Modelo",
+        "carsQty": "Cantidad de Carros",
+        "addMissingCar": "Añadir Carro Restante",
+        "toUseOnNextPeriod": "Para usarse en el próximo periodo",
+        "confirmCarsForNextPeriod": "Confirme carros para el próximo periodo",
+        "maxServiceQty": "Este carro excedió la cantidad máxima de servicios en un día",
+        "carExpiredOn": "Este carro expiró en {date}",
+        "notFound": "Carro no encontrado en sistema",
+        "existingCar": "La tablilla existe en nuestro sistema. Favor proveer otro número de tablilla",
+        "validCar": "Número de Tablilla Valido",
+        "membershipToAddCar": "Membresía a la que va añadir el carro"
     },
     "user": {
-        "name": "User",
-        "users": "Users",
-        "view": "View User",
-        "edit": "Edit User",
-        "add": "Add User",
-        "create": "Create User",
-        "selectMultiple": "Select Users",
-        "myProfile": "My Profile",
-        "info": "Customer Information",
-        "personalInfo": "Personal Information",
-        "editPersonalInfo": "Edit Personal Info",
-        "firstName": "Name",
-        "lastName": "Last Name",
-        "phoneNumber": "Phone Number",
-        "email": "Email",
-        "role": "Role",
-        "city": "City",
-        "dateOfBirth": "Date Of Birth",
+        "name": "Usuario",
+        "users": "Usuarios",
+        "view": "Ver Usuario",
+        "edit": "Editar Usuario",
+        "add": "Añadir Usuario",
+        "create": "Crear Usuario",
+        "selectMultiple": "Seleccionar Usuario",
+        "myProfile": "Mi Perfil",
+        "info": "Información del Cliente",
+        "personalInfo": "Información Personal",
+        "editPersonalInfo": "Editar Información Personal",
+        "firstName": "Nombre",
+        "lastName": "Apellido",
+        "phoneNumber": "Número de Teléfono",
+        "email": "Correo Electrónico",
+        "role": "Rol",
+        "city": "Ciudad",
+        "dateOfBirth": "Fecha de Nacimiento",
         "password": {
-            "forgot": "Forgot Password?",
-            "name": "Password",
-            "new": "New Password",
-            "changePassword": "Change Password",
-            "passwordRequirement": "Password must contain the following:",
-            "lowerCase": "lowercase letter",
-            "upperCase": "capital (uppercase) letter",
-            "number": "number",
-            "characters": "characters"
+            "forgot": "¿Olvido su contraseña?",
+            "name": "Contraseña",
+            "new": "Nueva Contraseña",
+            "changePassword": "Modificar Contraseña",
+            "passwordRequirement": "Contraseña debe de contener lo siguiente:",
+            "lowerCase": "letra minúscula",
+            "upperCase": "letra mayúscula",
+            "number": "número",
+            "characters": "caracteres"
         },
-        "authorizedBy": "Authorized By",
-        "notFound": "Customer not found"
+        "authorizedBy": "Autorizado por",
+        "notFound": "Cliente no encontrado"
     },
     "membership": {
-        "name": "Membership",
-        "product": "Product",
-        "handleInvalid": "Handle Invalid Memberships",
-        "memberships": "Memberships",
-        "invalidMemberships": "Invalid Memberships",
-        "createSubscriptions": "Create Memberships",
-        "notPlan": "You are currently not on any plan. Purchase a subscription below.",
-        "notHappy": "Not happy with your current plan? Cancel or Upgrade by clicking the button below.",
-        "disclaimer": "This is a subscription for 30 days upon purchase date.",
-        "perGroupOf": "per group of",
-        "manageBilling": "Manage Billing",
-        "info": "Membership Information",
-        "period": "Period",
-        "startDate": "Start Date",
-        "endDate": "End Date",
+        "name": "Membresías",
+        "product": "Producto",
+        "handleInvalid": "Manejar Membresía Invalida",
+        "memberships": "Membresía",
+        "invalidMemberships": "Membresía Invalida",
+        "createSubscriptions": "Crear Membresía",
+        "notPlan": "Actualmente no se encuentra en ningún plan. Favor adquirir una subscripción abajo.",
+        "notHappy": "Cancele o Maneje su subscripción al darle al botón abajo.",
+        "disclaimer": "Esto es una subscripción por 30 días desde el momento de la compra.",
+        "perGroupOf": "por grupo de",
+        "manageBilling": "Manejar Facturación",
+        "info": "Información de Membresía",
+        "period": "Periodo",
+        "startDate": "Fecha de Comienzo",
+        "endDate": "Fecha de Culminación",
         "status": "Status",
-        "validUntil": "Valid Until",
-        "validate": "Validate Memberships",
-        "readyByCamera": "Read By Camera",
-        "manualInput": "Manual Input",
-        "currentPeriodStart": "Current Period Start",
-        "currentPeriodEnd": "Current Period End",
-        "price": "Price",
+        "validUntil": "Valido Hasta",
+        "validate": "Valide su Membresía",
+        "readyByCamera": "Leído por la Camara",
+        "manualInput": "Input Manual",
+        "currentPeriodStart": "Periodo Corriente Comenzó",
+        "currentPeriodEnd": "Periodo Corriente Culmina",
+        "price": "Precio",
         "subTotal": "Sub Total",
-        "proceedToCheckout": "Proceed to Checkout"
+        "proceedToCheckout": "Proceder al Pago"
     },
     "service": {
-        "qty": "Service (Qty.)",
-        "name": "Service",
-        "all": "All Services",
-        "myServices": "My Services",
-        "services": "Services",
-        "view": "View Service",
-        "info": "Service Information",
-        "recipe": "Service Recipe",
-        "id": "Service ID",
-        "notFound": "Service Not found.",
-        "use": "User Service"
+        "qty": "Cantidad de Servicios",
+        "name": "Servicio",
+        "all": "Todos los Servicios",
+        "myServices": "Mis Servicios",
+        "services": "Servicios",
+        "view": "Ver Servicios",
+        "info": "Información de Servicios",
+        "recipe": "Recibo de Servicio",
+        "id": "ID del Servicio",
+        "notFound": "Service No Encontrado.",
+        "use": "Servicio de Usuario"
     },
     "location": {
-        "name": "Location",
-        "all": "Locations",
-        "add": "Add Location",
-        "edit": "Edit Location",
-        "view": "View Location",
-        "details": "Location Details"
+        "name": "Localidad",
+        "all": "Localidades",
+        "add": "Añadir Localidad",
+        "edit": "Editar Localidad",
+        "view": "Ver Localidad",
+        "details": "Detalles de la Localidad"
     },
     "validation": {
-        "missingCredentials": "Missing email or password",
-        "userNotExist": "User with email {email} does not exist. Please Register.",
-        "wrongPassword": "Incorrect password provided",
-        "emailNotExist": "Email does not exist.",
-        "requestNotSend": "Password Reset Request Not Send",
-        "passwordUpdated": "Password Updated {email}."
+        "missingCredentials": "Necesita ingresar el correo electrónico o su contraseña",
+        "userNotExist": "Usuario con el correo electrónico {email} no existe. Favor proceder a Registrarse.",
+        "wrongPassword": "Contraseña incorrecta provista",
+        "emailNotExist": "Correo Electrónico no existe.",
+        "requestNotSend": "Pedido de Reinicio de Contraseña no fue enviado",
+        "passwordUpdated": "Contraseña actualizada {email}."
     },
     "invoice": {
-        "all": "Invoices",
-        "myInvoices": "My Invoices"
+        "all": "Facturas",
+        "myInvoices": "Mis Facturas"
     },
-    "notification": "Notification",
-    "notifications": "Notifications",
-    "newNotifications": "You have {qty} new notifications",
-    "myNotifications": "My Notifications",
-    "stripeCharges": "Stripe Carges",
-    "invoices": "Invoices",
-    "invoiceNumber": "Invoice Number",
-    "events": "Events",
-    "date": "Date",
-    "action": "Action",
-    "quantity": "Quantity",
-    "zeroRecords": "No matching records found",
-    "first": "First",
-    "last": "Last",
-    "previous": "Previous",
-    "next": "Next",
-    "search": "Search",
-    "emptyTable": "No data available in table",
-    "infoNotEmpty": "Showing _START_ to _END_ of _TOTAL_ entries",
-    "infoEmpty": "Showing 0 to 0 of 0 entries",
-    "lengthMenu": "Show _MENU_ entries",
-    "selectLanguage": "Select Language",
-    "select": "Select",
-    "selectOne": "Select One",
-    "save": "Save",
-    "cancel": "Cancel",
+    "notification": "Notificación",
+    "notifications": "Notificaciones",
+    "newNotifications": "Tiene {qty} nuevas notificaciones",
+    "myNotifications": "Mis Notificaciones",
+    "stripeCharges": "Cargos",
+    "invoices": "Facturas",
+    "invoiceNumber": "Número de Factura",
+    "events": "Eventos",
+    "date": "Fecha",
+    "action": "Acción",
+    "quantity": "Cantidad",
+    "zeroRecords": "No se encontraron registros coincidentes",
+    "first": "Primero",
+    "last": "Último",
+    "previous": "Anterior",
+    "next": "Próximo",
+    "search": "Buscar",
+    "emptyTable": "No hay data disponible en la tabla",
+    "infoNotEmpty": "Mostrando _Principio_ a _Final_ de _TOTAL_ entradas",
+    "infoEmpty": "Mostrando 0 a 0 de 0 entradas",
+    "lengthMenu": "Muestra _MENU_ entradas",
+    "selectLanguage": "Seleccionar Lenguaje",
+    "select": "Seleccionar",
+    "selectOne": "Seleccione Una",
+    "save": "Guardar",
+    "cancel": "Cancelar",
     "content": {
-        "description": "A little description."
+        "description": "Una pequeña descripción."
     },
-    "amount": "Amount",
-    "type": "Type",
-    "description": "Description",
-    "inputBy": "Input By",
-    "viewAll": "View All",
-    "activity": "Activity",
-    "viewActivity": "View Activity",
-    "myActivity": "My Activity",
-    "customers": "Customers",
+    "amount": "Cantidad",
+    "type": "Tipo",
+    "description": "Descripción",
+    "inputBy": "Input Por",
+    "viewAll": "Ver Todo",
+    "activity": "Actividad",
+    "viewActivity": "Ver Actividad",
+    "myActivity": "Mi Actividad",
+    "customers": "Clientes",
     "dashboard": "Dashboard",
-    "myPlans": "My Plans",
-    "history": "History",
-    "historyInfo": "History Information",
-    "reports": "Reports",
-    "validate": "Validate",
-    "done": "Done",
-    "myCart": "My Cart",
-    "createdDate": "Created Date",
-    "dueDate": "Due Date",
-    "name": "Name",
-    "services": "Services",
-    "selectServices": "Select Services",
-    "active": "Active",
-    "yes": "Yes",
+    "myPlans": "Mis Planes",
+    "history": "Historial",
+    "historyInfo": "Información del Historial",
+    "reports": "Reportes",
+    "validate": "Validar",
+    "done": "Completado",
+    "myCart": "Mi Carrito",
+    "createdDate": "Creado En",
+    "dueDate": "Fecha Due",
+    "name": "Nombre",
+    "services": "Servicios",
+    "selectServices": "Seleccionar Servicios",
+    "active": "Activo",
+    "yes": "Sí",
     "no": "No",
-    "edit": "Edit",
-    "areYouSure": "Are you sure?",
-    "youWontRevert": "You won't be able to revert this!",
-    "yesDeleteIt": "Yes, delete it!",
-    "deleted": "Deleted",
-    "hasBeenDeleted": "${message} has been deleted.",
+    "edit": "Editar",
+    "areYouSure": "¿Esta Seguro?",
+    "youWontRevert": "¡No podrá revertir este cambio!",
+    "yesDeleteIt": "¡Si, elimínelo!",
+    "deleted": "Eliminado",
+    "hasBeenDeleted": "{message} ha sido eliminado.",
     "email": {
-        "title": "Auto Care Password Reset Request",
-        "verifyEmail": "Verify your email {email} to complete reset password process.",
-        "resetSucessfully": "Auto Care Password Reset Successfully",
-        "notSend": "Email Not Send."
+        "title": "Auto Care - Solicitud de restablecimiento de contraseña",
+        "verifyEmail": "Verifique su correo electrónico {email} para completar el proceso de restablecimiento de su contraseña.",
+        "resetSucessfully": "Auto Care - Contraseña restablecida exitosamente",
+        "notSend": "No se pudo enviar el correo electrónico."
     }
 }
