--- a/languages/es.json
+++ b/languages/es.json
@@ -199,5 +199,6 @@
         "verifyEmail": "Verifique su correo electrónico {email} para completar el proceso de restablecimiento de su contraseña.",
         "resetSucessfully": "Auto Care - Contraseña restablecida exitosamente",
         "notSend": "No se pudo enviar el correo electrónico."
-    }
+    },
+    "clear": "Limpiar"
 }
