--- a/languages/en.json
+++ b/languages/en.json
@@ -195,10 +195,11 @@
     "deleted": "Deleted",
     "hasBeenDeleted": "${message} has been deleted.",
     "email": {
-        "title": "Auto Care Password Reset Request",
+        "title": "Auto Care - Memberships",
         "verifyEmail": "Verify your email {email} to complete the reset password process.",
         "resetSucessfully": "Auto Care Password Reset Successfully",
-        "notSend": "Email Not Send."
+        "notSend": "Email Not Send.",
+        "passwordReset" : "Auto Care Password Reset Request"
     },
     "clear": "Clear"
 }
