--- a/languages/es.json
+++ b/languages/es.json
@@ -195,10 +195,11 @@
     "deleted": "Eliminado",
     "hasBeenDeleted": "{message} ha sido eliminado.",
     "email": {
-        "title": "Auto Care - Solicitud de restablecimiento de contraseña",
+        "title": "Auto Care - Membresías",
         "verifyEmail": "Verifique su correo electrónico {email} para completar el proceso de restablecimiento de su contraseña.",
         "resetSucessfully": "Auto Care - Contraseña restablecida exitosamente",
-        "notSend": "No se pudo enviar el correo electrónico."
+        "notSend": "No se pudo enviar el correo electrónico.",
+        "passwordReset": "Auto Care - Solicitud de restablecimiento de contraseña"
     },
     "clear": "Limpiar"
 }
