Implement utilization history for cars. On useService function: addServices, getServicesBetweenDates, and then recalculate current percentage. On Stripe Webhook: add old utilization to history/utilization collection, and then reset de current utilization and dates on car fields. Show utilization per car on view page.

--- a/languages/en.json
+++ b/languages/en.json
@@ -201,5 +201,6 @@
         "notSend": "Email Not Send.",
         "passwordReset" : "Auto Care Password Reset Request"
     },
-    "clear": "Clear"
+    "clear": "Clear",
+    "utilizationHistory" : "Utilization History"
 }
